--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+@theme {
+    --color-main-bg-color: #F9FAFB;
+    --color-accent-bg-color: #FFFFFF;
+    --color-main-border-color: #E5E7EB;
+
+    --color-main-text-color: #101828;
+    --color-accent-text-color: #4A5565;
+
+    --color-main-red-color: #FB4B4E;
+    --color-main-green-color: #63B995;
+
+}
