--- a/src/components/RoomComponents/TopBar.astro
+++ b/src/components/RoomComponents/TopBar.astro
@@ -7,7 +7,7 @@ const {roomTitle,participants = 0} = Astro.props;
 ---
 
 
-<div class="w-full h-[85px] bg-main-bg-color border-b border-main-border-color flex justify-between items-center py-4 px-6 ">
+<div class="w-full h-[85px] shrink-0 bg-main-bg-color border-b border-main-border-color flex justify-between items-center py-4 px-6 ">
     <!-- Title & Member Count -->
     <div class="flex flex-col justify-between">
         <h1 class="font-[inter] text-[20px] tracking-[-0.45px] text-main-text-color">{roomTitle}</h1>
