--- a/src/pages/room.astro
+++ b/src/pages/room.astro
@@ -9,5 +9,5 @@ import BottomBar from "../components/RoomComponents/BottomBar.astro";
 <main class="w-full h-dvh overflow-hidden flex flex-col">
     <TopBar roomTitle="Physics Study Session" participants={5}/>
     <MainContent/>
-    <BottomBar roomTitle="Study Session #1234" connectionType={0}/>
+    <BottomBar roomStringIdentifier="Study Session #1234" connectionType={0}/>
 </main>
